client/src/style/Project/project.scss
@use "../index.scss";

.project-page {
    @include index.page-layout;

    .project-display {
        @include index.page-display;
        display: flex;
        background-image: url("../../assets/media/1.jpg");
        background-attachment: fixed;
        background-size: contain;
        min-width: 100vw;
        width: fit-content;

        .project-board {
            position: relative;
            z-index: 0;
            min-height: 100%;
            min-width: 100%;

            h2 {
                padding-left: 1rem;
                border-bottom: 1px solid gainsboro;
                backdrop-filter: blur(5px);
                background-color: rgba(255, 255, 255, 0.5);
                height: 3rem;
                display: flex;
                align-items: center;
            }
        }

        .p-left-15rem {
            padding-left: 15rem;
            transition: padding-left 0.3s ease;
        }

        .p-left-1rem {
            padding-left: 1rem;
            transition: padding-left 0.3s ease;
        }
    }
}

